Github action setup

--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic"
   },
   "eslintConfig": {
     "extends": [
@@ -75,6 +76,7 @@
     "@storybook/node-logger": "^6.4.17",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.17",
+    "chromatic": "^6.4.3",
     "react-test-renderer": "^17.0.2",
     "webpack": "^5.68.0"
   }
