--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
     "build-storybook": "build-storybook -s public",
-    "chromatic": "npx chromatic"
+    "chromatic": "npx chromatic",
+    "format": "prettier --write"
   },
   "eslintConfig": {
     "extends": [
