--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-components": "^5.1.21",
     "husky": "^7.0.4",
     "lint-staged": "^12.3.2",
+    "lodash": "^4.17.21",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -76,6 +77,7 @@
     "@storybook/node-logger": "^6.4.17",
     "@storybook/preset-create-react-app": "^4.0.0",
     "@storybook/react": "^6.4.17",
+    "@types/lodash": "^4.14.178",
     "chromatic": "^6.4.3",
     "react-test-renderer": "^17.0.2",
     "webpack": "^5.68.0"
